--- a/css/styles.css
+++ b/css/styles.css
@@ -550,6 +550,69 @@ body {
 .footer-socials-icon {
   fill: currentColor;
 }
+.subscribe-footer-container {
+  width: 570px;
+  height: 86px;
+}
+.subscribe-title {
+  margin-left: 93px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.subscribe-area {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 93px;
+}
+.mail-form {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.input-area {
+  width: 100%;
+  height: 100%;
+}
+.placeholder-text {
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe-btn-tumb {
+  position: relative;
+}
+.subscribe-btn {
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+.subscribe-btn-icon {
+  position: absolute;
+  top: 0;
+  /* display: flex;
+  align-items: center; */
+}
 /*--portfolio--*/
 
 /*--header-done-on-index.html--*/
