--- a/css/styles.css
+++ b/css/styles.css
@@ -589,6 +589,7 @@ body {
 .input-area {
   width: 100%;
   height: 100%;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .placeholder-text {
   font-size: 16px;
@@ -608,6 +609,7 @@ body {
   width: 200px;
   height: 50px;
   margin-left: 12px;
+  border: transparent;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -643,6 +645,7 @@ body {
   margin: 0 auto;
   font-family: inherit;
   cursor: pointer;
+  border: transparent;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -768,6 +771,7 @@ body {
   display: flex;
   padding: 0;
   width: 30px;
+  border: transparent;
   height: 30px;
   border-radius: 50%;
   background: #ffffff;
@@ -777,6 +781,7 @@ body {
 }
 .modal-icon {
   background: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
   opacity: 0;
@@ -790,7 +795,7 @@ body {
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--header-links-title-text-color);
 }
 .modal-form {
   padding-left: 40px;
@@ -804,7 +809,7 @@ body {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  color: #757575;
+  color: var(--primary-text-color);
 }
 .modal-label + .modal-label {
   margin-top: 10px;
@@ -851,6 +856,7 @@ body {
 }
 .modal-botton {
   background: #188ce8;
+  border: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   width: 200px;
@@ -872,17 +878,45 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .modal-reg-container {
   margin-top: 12px;
 }
 .input-modal-form {
   position: relative;
-  width: 448px;
+  display: block;
+}
+.input-modal-form:hover,
+.input-modal-form:focus,
+.input-modal-form:active {
+  border-color: var(--accent-color);
+}
+.input-modal:hover {
+  border-color: var(--accent-color);
+}
+.input-modal-form:hover .modal-form-icon,
+.input-modal-form:focus .modal-form-icon,
+.input-modal-form:active .modal-form-icon {
+  fill: var(--accent-color);
+}
+.input-modal {
+  width: 100%;
   height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-icon {
-  top: 0;
-  left: 15px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon,
+.modal-btn:active .modal-icon {
+  fill: var(--accent-color);
 }
