--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,9 @@ h5,
 h6 {
   margin: 0;
 }
+button {
+  cursor: pointer;
+}
 ul {
   margin: 0;
   padding: 0;
@@ -32,7 +35,7 @@ ul {
 .link-logo {
   color: #2196f3;
   text-decoration: none;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -50,7 +53,7 @@ ul {
 }
 /*--base-body-colors-font--*/
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   background: var(--hero-text-color);
   color: var(--primary-text-color);
 }
@@ -155,7 +158,7 @@ body {
   color: var(--accent-color);
 }
 .current::after {
-  content: "";
+  content: '';
   width: 100%;
   height: 4px;
   color: var(--accent-color);
@@ -175,10 +178,7 @@ body {
   text-align: center;
   background-color: var(--background-color);
   color: var(--hero-text-color);
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/background-Img.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -553,11 +553,10 @@ body {
   fill: currentColor;
 }
 .subscribe-footer-container {
+  margin-left: 93px;
   width: 570px;
-  height: 86px;
 }
 .subscribe-title {
-  margin-left: 93px;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.14;
@@ -569,7 +568,6 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-left: 93px;
 }
 .mail-form {
   width: 358px;
@@ -587,8 +585,14 @@ body {
   border: 2px solid var(--accent-color);
 }
 .input-area {
-  width: 100%;
-  height: 100%;
+  padding-left: 16px;
+  width: 358px;
+  height: 50px;
+  background: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .placeholder-text {
@@ -753,6 +757,7 @@ body {
   transform: rotate(250deg) scale(0.5);
 }
 .modal {
+  padding: 40px;
   width: 528px;
   min-height: 581px;
   background-color: var(--hero-text-color);
@@ -789,7 +794,7 @@ body {
   visibility: hidden;
 }
 .modal-title {
-  margin-top: 40px;
+  margin-bottom: 12px;
   font-size: 20px;
   font-weight: bold;
   line-height: 1.15;
@@ -798,8 +803,6 @@ body {
   color: var(--header-links-title-text-color);
 }
 .modal-form {
-  padding-left: 40px;
-  padding-right: 40px;
   display: flex;
   flex-direction: column;
 }
@@ -813,14 +816,6 @@ body {
 }
 .modal-label + .modal-label {
   margin-top: 10px;
-}
-.input-modal-form {
-  margin-top: 4px;
-  width: 448px;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
 }
 .modal-textarea {
   width: 448px;
@@ -837,12 +832,13 @@ body {
 }
 .modal-check-text {
   font-size: 14px;
-  color: #999999;
   display: flex;
+  color: var(--primary-text-color);
   align-items: center;
+  justify-content: center;
 }
 .modal-check-text::before {
-  content: "";
+  content: '';
   width: 16px;
   height: 15px;
   border: 2px solid #000000;
@@ -854,7 +850,7 @@ body {
   background-image: url(../images/icon-check.svg);
   border: none;
 }
-.modal-botton {
+.modal-button {
   background: #188ce8;
   border: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -870,23 +866,23 @@ body {
   letter-spacing: 0.06em;
   color: #ffffff;
   margin-top: 30px;
-  margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
 }
 .conditions-modal {
+  margin-left: 5px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--accent-color);
 }
-.modal-reg-container {
-  margin-top: 12px;
-}
 .input-modal-form {
   position: relative;
   display: block;
+  margin-top: 4px;
+  height: 40px;
 }
+
 .input-modal-form:hover,
 .input-modal-form:focus,
 .input-modal-form:active {
@@ -901,6 +897,7 @@ body {
   fill: var(--accent-color);
 }
 .input-modal {
+  padding-left: 30px;
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
