--- a/css/styles.css
+++ b/css/styles.css
@@ -817,6 +817,14 @@ body {
 .modal-label + .modal-label {
   margin-top: 10px;
 }
+.placeholder-text-mail {
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
 .modal-textarea {
   width: 448px;
   height: 120px;
@@ -829,6 +837,12 @@ body {
   box-sizing: border-box;
   border-radius: 4px;
   padding: 12px 16px 12px 16px;
+}
+.text-placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 .modal-check-text {
   font-size: 14px;
